<resources>
    <string name="app_name">简单记账</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>

    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="not_title_set">not title set</string>

    <string name="communication_fare">交通费</string>

    <string name="money_unit">元</string>

    <string name="text_remark">备注</string>
    <string name="text_confirm">确定</string>
    <string name="text_nickname">昵称</string>
    <string name="text_save">保存</string>
    <string name="text_normal">常规</string>
    <string name="text_not_normal">非常规</string>
    <string name="text_not_data">没有数据</string>
    <string name="text_edit">编辑</string>
    <string name="text_month_pay">%d月支出</string>
    <string name="text_pay">支出</string>
    <string name="text_cancel">取消</string>
    <string name="text_share">分享</string>
    <string name="text_export_success">EXCEL表格导出成功!</string>
    <string name="text_toast_nopay">请输入支出金额</string>

    <string name="text_account_fail">记录失败</string>

    <string name="today_pay">今日支出</string>

    <string name="menu_person_info">个人信息</string>
    <string name="menu_index">首页</string>
    <string name="menu_pay_glide">支出流水</string>

    <string name="menu_pay_form">支出图表</string>

    <string name="menu_excel_export">导出EXCEL</string>

    <string name="menu_settings">设置</string>

    <string name="menu_logout">退出</string>

    <string name="menu_demo_describe">一粒一饭当思来之不易\n半丝半缕恒念物力艰难</string>

    <string name="fragment_glide_text_pay">支出</string>
    <string name="fragment_glide_text_budget">预算</string>
    <string name="fragment_glide_text_surplus">结余</string>

    <string name="account_choice_date">选择日期</string>

    <string name="fragment_glide_title">%d年</string>
    <string name="activity_form_title">统计</string>
    <string name="activity_account_title">记一笔</string>

    <string name="default_nickname">你的名字</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
