<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_index"
            android:icon="@mipmap/menu_mine"
            android:title="@string/menu_index" />
        <item
            android:id="@+id/nav_glide"
            android:icon="@mipmap/menu_glide"
            android:title="@string/menu_pay_glide" />
        <item
            android:id="@+id/nav_form"
            android:icon="@mipmap/menu_form"
            android:title="@string/menu_pay_form" />
        <item
            android:id="@+id/nav_excel"
            android:icon="@mipmap/menu_export"
            android:title="@string/menu_excel_export" />
        <item
            android:id="@+id/nav_setting"
            android:icon="@mipmap/menu_setting"
            android:title="@string/menu_settings" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@mipmap/menu_logout"
            android:title="@string/menu_logout" />

    </group>

    <!--    <item android:title="Communicate">
            <menu>
                <item
                    android:id="@+id/nav_share"
                    android:icon="@drawable/ic_menu_share"
                    android:title="Share" />
                <item
                    android:id="@+id/nav_send"
                    android:icon="@drawable/ic_menu_send"
                    android:title="Send" />
            </menu>
        </item>-->

</menu>
