<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_setting"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="com.jim.account.ui.activity.SettingActivity">

    <android.support.design.widget.AppBarLayout
        style="@style/Base.ThemeOverlay.AppCompat.Dark.ActionBar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:navigationIcon="@mipmap/abc_ic_ab_back_mtrl_am_alpha"
            app:title="@string/menu_settings"
            app:titleTextColor="@color/white" />
    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingTop="@dimen/padding_m"
            android:divider="@drawable/line_divider_calculate"
            android:showDividers="beginning|end|middle"
            android:dividerPadding="1dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/white"
                android:padding="@dimen/padding_m">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingRight="@dimen/padding_m"
                    android:text="@string/text_nickname"
                    android:textColor="@color/text_gray" />

                <EditText
                    android:id="@+id/edittext_nickname_activity_setting"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:hint="@string/text_nickname"
                    android:maxLines="1"
                    android:textColor="@color/text_black"
                    android:textCursorDrawable="@drawable/text_cursor"
                    android:textSize="@dimen/text_size_m" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/white"
                android:padding="@dimen/padding_m">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingRight="@dimen/padding_m"
                    android:text="@string/fragment_glide_text_budget"
                    android:textColor="@color/text_gray" />

                <EditText
                    android:id="@+id/edittext_budget_activity_setting"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:hint="0.00"
                    android:inputType="numberDecimal"
                    android:textColor="@color/text_black"
                    android:textCursorDrawable="@drawable/text_cursor"
                    android:textSize="@dimen/text_size_m" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="10dp"
                android:background="@color/divider_calculate"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/white"
                android:layout_marginBottom="5dp"
                android:padding="@dimen/padding_m">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingRight="@dimen/padding_m"
                    android:text="@string/text_remark"
                    android:textColor="@color/text_gray"
                    android:id="@+id/textView2" />

                <EditText
                    android:id="@+id/edittext_remark_activity_setting"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:hint="@string/text_remark"
                    android:textColor="@color/text_black"
                    android:minLines="3"
                    android:gravity="top"
                    android:textCursorDrawable="@drawable/text_cursor"
                    android:textSize="@dimen/text_size_m" />
            </LinearLayout>

            <Button
                android:id="@+id/button_save_activity_setting"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                android:alpha="0.8"
                android:textColor="@color/white"
                android:text="@string/text_save"
                android:layout_margin="@dimen/padding_m"/>

        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>
</android.support.design.widget.CoordinatorLayout>
